--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "dependencies": {
     "@material-ui/core": "^3.7.0",
     "@material-ui/icons": "^3.0.1",
+    "local-storage": "^1.4.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-google-login": "^4.0.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1"
   },
