--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "dependencies": {
     "express": "^4.16.4",
-    "react-scripts": "2.1.1"
+    "react-scripts": "2.1.1",
+    "ssl-express-www": "^3.0.3"
   },
   "devDependencies": {},
   "scripts": {
