--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,6 +1,8 @@
 {
   "short_name": "Volley score",
   "name": "Realtime volley score",
+  "start_url": "/",
+  "display": "standalone",
   "icons": [
     {
       "src": "favicon.ico",
@@ -11,10 +13,13 @@
       "src": "icon.png",
       "sizes": "512x512",  
       "type": "image/png"  
+    },
+    {  
+      "src": "icon_192.png",
+      "sizes": "192x192",  
+      "type": "image/png"  
     }
   ],
-  "start_url": "/",
-  "display": "standalone",
   "theme_color": "#000000",
   "background_color": "#ffffff"
 }
