--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,8 @@
     "react-dom": "^16.6.3",
     "react-google-login": "^4.0.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "^2.1.2"
+    "react-scripts": "^2.1.2",
+    "redux": "^4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -30,5 +31,8 @@
     "not op_mini all"
   ],
   "proxy": "http://localhost:5000",
-  "homepage": "https://react-vsk.herokuapp.com"
+  "homepage": "https://react-vsk.herokuapp.com",
+  "devDependencies": {
+    "react-redux": "^6.0.0"
+  }
 }
