--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "react-google-login": "^4.0.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.2",
+    "react-swipeable-views": "^0.13.0",
     "redux": "^4.0.1"
   },
   "scripts": {
