--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "node-sass": "^4.11.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-facebook-login": "^4.1.1",
     "react-google-login": "^4.0.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.2",
