--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "@material-ui/icons": "^3.0.1",
     "downshift": "^3.1.12",
     "firebase": "^5.7.2",
+    "history": "^4.7.2",
     "image-compressor.js": "^1.1.4",
     "local-storage": "^1.4.2",
     "moment": "^2.23.0",
@@ -18,6 +19,7 @@
     "react-dom": "^16.6.3",
     "react-facebook-login": "^4.1.1",
     "react-flip-move": "^3.0.3",
+    "react-ga": "^2.5.7",
     "react-google-login": "^4.0.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.2",
