--- a/client/package.json
+++ b/client/package.json
@@ -3,16 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^1.1.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.13",
     "@fortawesome/free-solid-svg-icons": "^5.7.0",
     "@fortawesome/react-fontawesome": "^0.1.4",
     "@material-ui/core": "^3.7.0",
     "@material-ui/icons": "^3.0.1",
+    "date-fns": "^2.0.0-alpha.27",
     "downshift": "^3.1.12",
     "firebase": "^5.7.2",
     "history": "^4.7.2",
     "image-compressor.js": "^1.1.4",
     "local-storage": "^1.4.2",
+    "material-ui-pickers": "^2.2.4",
     "moment": "^2.23.0",
     "node-sass": "^4.11.0",
     "react": "^16.6.3",
