--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "main": "index.js",
   "dependencies": {
     "express": "^4.16.4",
+    "firebase-admin": "^7.2.0",
     "node-sass": "^4.11.0",
     "react-scripts": "2.1.1",
-    "ssl-express-www": "^3.0.3"
+    "ssl-express-www": "^3.0.3",
+    "web-push": "^3.3.4"
   },
   "devDependencies": {},
   "scripts": {
