--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.16.4",
     "firebase-admin": "^7.2.0",
     "node-sass": "^4.11.0",
